--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./01.实现三角形.css" />
+    <link rel="stylesheet" href="./02.扇形.css">
+    <link rel="stylesheet" href="./03.园和半圆.css">
+    <link rel="stylesheet" href="./04.宽高自适应正方形.css">
+    <link rel="stylesheet" href="./05.梯形.css">
+    <link rel="stylesheet" href="./06.等腰梯形.css">
   </head>
   <body>
     <div class="test1"></div>
@@ -12,5 +17,11 @@
     <div class="test3"></div>
     <div class="test4"></div>
     <div class="test5"></div>
+    <div class="test6"></div>
+    <div class="test7"></div>
+    <div class="test8"></div>
+    <div class="test9"></div>
+    <div class="test10"></div>
+    <div class="test10"></div>
   </body>
 </html>
